--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.37
-loader_version=0.11.6
+minecraft_version = 1.12.2
+yarn_mappings = 1.12.2+build.202104240803
+loader_version = 0.11.3
 # Mod Properties
 mod_version=1.0
 maven_group=im.hunnybon
