--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version = 1.12.2
-yarn_mappings = 1.12.2+build.202104240803
-loader_version = 0.11.3
+minecraft_version = 1.8.9
+yarn_mappings = 1.8.9+build.202106250216
+loader_version = 0.11.1+build.202102220648
 # Mod Properties
 mod_version=1.0
 maven_group=im.hunnybon
